k8s_manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otushw
spec:
  type: NodePort
  selector:
    app: otushw
  ports:
    - port: 80
      targetPort: 8000
