k8s_manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otushw
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /health$1
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/rosignol/.*
            pathType: ImplementationSpecific
            backend:
              service:
                name: otushw
                port:
                  number: 8000
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: otushw
                port:
                  number: 8000
